switching to mac because flask..

--- a/resources/index1.html
+++ b/resources/index1.html
@@ -16,7 +16,7 @@
       <p>Beach. Rainforest. Volcano. Tree House. Sloths.</p>
       <p><a class="btn btn-primary btn-lg" href="/scrape_mars" role="button">Get Data!</a></p>
     </div>
-    <img src="{{ vacation.sloth_img }}" alt="Sloth">
+    <!-- <img src="{{ mars_data.news_p }}" alt="Sloth"> -->
     <h2></h2>
     <h3></h3>
     <h3></h3>
